packages/win32/src/kernel32.g.h

MYLIB_EXPORT Win32Result EnumResourceTypesW_Wrapper(HMODULE hModule, ENUMRESTYPEPROCW lpEnumFunc, long long lParam);
MYLIB_EXPORT Win32Result EnumSystemFirmwareTables_Wrapper(DWORD firmwareTableProviderSignature, unsigned char* pFirmwareTableEnumBuffer, unsigned long bufferSize);
MYLIB_EXPORT Win32Result EscapeCommFunction_Wrapper(HANDLE hFile, DWORD dwFunc);
MYLIB_EXPORT Win32Result FileTimeToDosDateTime_Wrapper(FILETIME* lpFileTime, unsigned short* lpFatDate, unsigned short* lpFatTime);
MYLIB_EXPORT Win32Result FileTimeToSystemTime_Wrapper(FILETIME* lpFileTime, SYSTEMTIME* lpSystemTime);
MYLIB_EXPORT Win32Result FillConsoleOutputAttribute_Wrapper(HANDLE hConsoleOutput, unsigned short wAttribute, unsigned long nLength, COORD dwWriteCoord, unsigned long* lpNumberOfAttrsWritten);
MYLIB_EXPORT Win32Result FillConsoleOutputCharacterW_Wrapper(HANDLE hConsoleOutput, char cCharacter, unsigned long nLength, COORD dwWriteCoord, unsigned long* lpNumberOfCharsWritten);
MYLIB_EXPORT Win32Result FindClose_Wrapper(HANDLE hFindFile);
MYLIB_EXPORT Win32Result FindCloseChangeNotification_Wrapper(HANDLE hChangeHandle);
MYLIB_EXPORT Win32Result FindFirstChangeNotificationW_Wrapper(PCWSTR lpPathName, BOOL bWatchSubtree, DWORD dwNotifyFilter);
MYLIB_EXPORT Win32Result FindFirstFileW_Wrapper(PCWSTR lpFileName, WIN32_FIND_DATAW* lpFindFileData);
MYLIB_EXPORT Win32Result FindFirstFileExW_Wrapper(PCWSTR lpFileName, LONG fInfoLevelId, void* lpFindFileData, LONG fSearchOp, void* lpSearchFilter, DWORD dwAdditionalFlags);
MYLIB_EXPORT Win32Result FindFirstFileNameW_Wrapper(PCWSTR lpFileName, unsigned long dwFlags, unsigned long* stringLength, PWSTR linkName);
MYLIB_EXPORT Win32Result FindFirstStreamW_Wrapper(PCWSTR lpFileName, LONG infoLevel, void* lpFindStreamData, unsigned long dwFlags);
MYLIB_EXPORT Win32Result FindFirstVolumeW_Wrapper(PWSTR lpszVolumeName, unsigned long cchBufferLength);
MYLIB_EXPORT Win32Result FindNextChangeNotification_Wrapper(HANDLE hChangeHandle);
MYLIB_EXPORT Win32Result FindNextFileW_Wrapper(HANDLE hFindFile, WIN32_FIND_DATAW* lpFindFileData);
MYLIB_EXPORT Win32Result FindNextFileNameW_Wrapper(HANDLE hFindStream, unsigned long* stringLength, PWSTR linkName);
MYLIB_EXPORT Win32Result FindNextStreamW_Wrapper(HANDLE hFindStream, void* lpFindStreamData);
MYLIB_EXPORT Win32Result FindNextVolumeW_Wrapper(HANDLE hFindVolume, PWSTR lpszVolumeName, unsigned long cchBufferLength);
MYLIB_EXPORT Win32Result FindStringOrdinal_Wrapper(unsigned long dwFindStringOrdinalFlags, PCWSTR lpStringSource, int cchSource, PCWSTR lpStringValue, int cchValue, BOOL bIgnoreCase);
MYLIB_EXPORT Win32Result FindVolumeClose_Wrapper(HANDLE hFindVolume);
MYLIB_EXPORT Win32Result FlushConsoleInputBuffer_Wrapper(HANDLE hConsoleInput);
MYLIB_EXPORT Win32Result FlushFileBuffers_Wrapper(HANDLE hFile);
MYLIB_EXPORT Win32Result FormatMessageW_Wrapper(DWORD dwFlags, void* lpSource, unsigned long dwMessageId, unsigned long dwLanguageId, PWSTR lpBuffer, unsigned long nSize, signed char** arguments);
MYLIB_EXPORT Win32Result FreeConsole_Wrapper();
MYLIB_EXPORT Win32Result FreeLibrary_Wrapper(HMODULE hLibModule);
MYLIB_EXPORT Win32Result GetActiveProcessorCount_Wrapper(unsigned short groupNumber);
MYLIB_EXPORT Win32Result GetBinaryTypeW_Wrapper(PCWSTR lpApplicationName, unsigned long* lpBinaryType);
MYLIB_EXPORT Win32Result GetCommConfig_Wrapper(HANDLE hCommDev, COMMCONFIG* lpCC, unsigned long* lpdwSize);
MYLIB_EXPORT Win32Result GetCommMask_Wrapper(HANDLE hFile, DWORD* lpEvtMask);
MYLIB_EXPORT Win32Result GetCommModemStatus_Wrapper(HANDLE hFile, DWORD* lpModemStat);
MYLIB_EXPORT Win32Result GetCommProperties_Wrapper(HANDLE hFile, COMMPROP* lpCommProp);
MYLIB_EXPORT Win32Result GetCommState_Wrapper(HANDLE hFile, DCB* lpDCB);
MYLIB_EXPORT Win32Result GetCommTimeouts_Wrapper(HANDLE hFile, COMMTIMEOUTS* lpCommTimeouts);
MYLIB_EXPORT Win32Result GetCompressedFileSizeW_Wrapper(PCWSTR lpFileName, unsigned long* lpFileSizeHigh);
MYLIB_EXPORT Win32Result GetComputerNameW_Wrapper(PWSTR lpBuffer, unsigned long* nSize);
MYLIB_EXPORT Win32Result GetComputerNameExW_Wrapper(LONG nameType, PWSTR lpBuffer, unsigned long* nSize);
MYLIB_EXPORT Win32Result GetConsoleCP_Wrapper();
MYLIB_EXPORT Win32Result GetConsoleCursorInfo_Wrapper(HANDLE hConsoleOutput, CONSOLE_CURSOR_INFO* lpConsoleCursorInfo);
MYLIB_EXPORT Win32Result GetConsoleMode_Wrapper(HANDLE hConsoleHandle, DWORD* lpMode);
MYLIB_EXPORT Win32Result GetConsoleOutputCP_Wrapper();
MYLIB_EXPORT Win32Result GetConsoleScreenBufferInfo_Wrapper(HANDLE hConsoleOutput, CONSOLE_SCREEN_BUFFER_INFO* lpConsoleScreenBufferInfo);
MYLIB_EXPORT Win32Result GetConsoleSelectionInfo_Wrapper(CONSOLE_SELECTION_INFO* lpConsoleSelectionInfo);
MYLIB_EXPORT Win32Result GetConsoleTitleW_Wrapper(PWSTR lpConsoleTitle, unsigned long nSize);
MYLIB_EXPORT Win32Result GetCurrentActCtx_Wrapper(HANDLE* lphActCtx);
MYLIB_EXPORT Win32Result GetDefaultCommConfigW_Wrapper(PCWSTR lpszName, COMMCONFIG* lpCC, unsigned long* lpdwSize);
MYLIB_EXPORT Win32Result GetDiskFreeSpaceW_Wrapper(PCWSTR lpRootPathName, unsigned long* lpSectorsPerCluster, unsigned long* lpBytesPerSector, unsigned long* lpNumberOfFreeClusters, unsigned long* lpTotalNumberOfClusters);
MYLIB_EXPORT Win32Result GetDiskFreeSpaceExW_Wrapper(PCWSTR lpDirectoryName, unsigned long long* lpFreeBytesAvailableToCaller, unsigned long long* lpTotalNumberOfBytes, unsigned long long* lpTotalNumberOfFreeBytes);
MYLIB_EXPORT Win32Result GetDllDirectoryW_Wrapper(unsigned long nBufferLength, PWSTR lpBuffer);
MYLIB_EXPORT Win32Result GetEnvironmentVariableW_Wrapper(PCWSTR lpName, PWSTR lpBuffer, unsigned long nSize);
MYLIB_EXPORT Win32Result GetExitCodeProcess_Wrapper(HANDLE hProcess, unsigned long* lpExitCode);
MYLIB_EXPORT Win32Result GetFileAttributesW_Wrapper(PCWSTR lpFileName);
MYLIB_EXPORT Win32Result GetFileAttributesExW_Wrapper(PCWSTR lpFileName, LONG fInfoLevelId, void* lpFileInformation);
MYLIB_EXPORT Win32Result GetFileInformationByHandle_Wrapper(HANDLE hFile, BY_HANDLE_FILE_INFORMATION* lpFileInformation);
MYLIB_EXPORT Win32Result GetFileSize_Wrapper(HANDLE hFile, unsigned long* lpFileSizeHigh);
MYLIB_EXPORT Win32Result GetFileSizeEx_Wrapper(HANDLE hFile, long long* lpFileSize);
MYLIB_EXPORT Win32Result GetFileType_Wrapper(HANDLE hFile);
MYLIB_EXPORT Win32Result GetFinalPathNameByHandleW_Wrapper(HANDLE hFile, PWSTR lpszFilePath, unsigned long cchFilePath, DWORD dwFlags);
MYLIB_EXPORT Win32Result GetFullPathNameW_Wrapper(PCWSTR lpFileName, unsigned long nBufferLength, PWSTR lpBuffer, PWSTR* lpFilePart);
MYLIB_EXPORT Win32Result GetHandleInformation_Wrapper(HANDLE hObject, unsigned long* lpdwFlags);