packages/win32/lib/src/_internal/kernel32.g.dart


@internal
@Native<
  NativeWin32Result Function(
    HMODULE,
    Pointer<NativeFunction<ENUMRESTYPEPROC>>,
    IntPtr,
  )
>()
external NativeWin32Result EnumResourceTypesW_Wrapper(
  int hModule,
  Pointer<NativeFunction<ENUMRESTYPEPROC>> lpEnumFunc,
  int lParam,
);

@internal
@Native<NativeWin32Result Function(Uint32, Pointer<Uint8>, Uint32)>()
external NativeWin32Result EnumSystemFirmwareTables_Wrapper(
  int firmwareTableProviderSignature,
  Pointer<Uint8> pFirmwareTableEnumBuffer,
  int bufferSize,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Uint32)>()
external NativeWin32Result EscapeCommFunction_Wrapper(int hFile, int dwFunc);

@internal
@Native<
  NativeWin32Result Function(
    Pointer<FILETIME>,
    Pointer<Uint16>,
    Pointer<Uint16>,
  )
>()
external NativeWin32Result FileTimeToDosDateTime_Wrapper(
  Pointer<FILETIME> lpFileTime,
  Pointer<Uint16> lpFatDate,
  Pointer<Uint16> lpFatTime,
);

@internal
@Native<NativeWin32Result Function(Pointer<FILETIME>, Pointer<SYSTEMTIME>)>()
external NativeWin32Result FileTimeToSystemTime_Wrapper(
  Pointer<FILETIME> lpFileTime,
  Pointer<SYSTEMTIME> lpSystemTime,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Uint16, Uint32, COORD, Pointer<Uint32>)
>()
external NativeWin32Result FillConsoleOutputAttribute_Wrapper(
  int hConsoleOutput,
  int wAttribute,
  int nLength,
  COORD dwWriteCoord,
  Pointer<Uint32> lpNumberOfAttrsWritten,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Uint16, Uint32, COORD, Pointer<Uint32>)
>()
external NativeWin32Result FillConsoleOutputCharacterW_Wrapper(
  int hConsoleOutput,
  int cCharacter,
  int nLength,
  COORD dwWriteCoord,
  Pointer<Uint32> lpNumberOfCharsWritten,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result FindClose_Wrapper(int hFindFile);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result FindCloseChangeNotification_Wrapper(
  int hChangeHandle,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, BOOL, Uint32)>()
external NativeWin32Result FindFirstChangeNotificationW_Wrapper(
  PCWSTR lpPathName,
  int bWatchSubtree,
  int dwNotifyFilter,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, Pointer<WIN32_FIND_DATA>)>()
external NativeWin32Result FindFirstFileW_Wrapper(
  PCWSTR lpFileName,
  Pointer<WIN32_FIND_DATA> lpFindFileData,
);

@internal
@Native<
  NativeWin32Result Function(PCWSTR, Int32, Pointer, Int32, Pointer, Uint32)
>()
external NativeWin32Result FindFirstFileExW_Wrapper(
  PCWSTR lpFileName,
  int fInfoLevelId,
  Pointer lpFindFileData,
  int fSearchOp,
  Pointer lpSearchFilter,
  int dwAdditionalFlags,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, Uint32, Pointer<Uint32>, PWSTR)>()
external NativeWin32Result FindFirstFileNameW_Wrapper(
  PCWSTR lpFileName,
  int dwFlags,
  Pointer<Uint32> stringLength,
  PWSTR linkName,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, Int32, Pointer, Uint32)>()
external NativeWin32Result FindFirstStreamW_Wrapper(
  PCWSTR lpFileName,
  int infoLevel,
  Pointer lpFindStreamData,
  int dwFlags,
);

@internal
@Native<NativeWin32Result Function(PWSTR, Uint32)>()
external NativeWin32Result FindFirstVolumeW_Wrapper(
  PWSTR lpszVolumeName,
  int cchBufferLength,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result FindNextChangeNotification_Wrapper(
  int hChangeHandle,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<WIN32_FIND_DATA>)>()
external NativeWin32Result FindNextFileW_Wrapper(
  int hFindFile,
  Pointer<WIN32_FIND_DATA> lpFindFileData,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>, PWSTR)>()
external NativeWin32Result FindNextFileNameW_Wrapper(
  int hFindStream,
  Pointer<Uint32> stringLength,
  PWSTR linkName,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer)>()
external NativeWin32Result FindNextStreamW_Wrapper(
  int hFindStream,
  Pointer lpFindStreamData,
);

@internal
@Native<NativeWin32Result Function(HANDLE, PWSTR, Uint32)>()
external NativeWin32Result FindNextVolumeW_Wrapper(
  int hFindVolume,
  PWSTR lpszVolumeName,
  int cchBufferLength,
);

@internal
@Native<
  NativeWin32Result Function(Uint32, PCWSTR, Int32, PCWSTR, Int32, BOOL)
>()
external NativeWin32Result FindStringOrdinal_Wrapper(
  int dwFindStringOrdinalFlags,
  PCWSTR lpStringSource,
  int cchSource,
  PCWSTR lpStringValue,
  int cchValue,
  int bIgnoreCase,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result FindVolumeClose_Wrapper(int hFindVolume);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result FlushConsoleInputBuffer_Wrapper(int hConsoleInput);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result FlushFileBuffers_Wrapper(int hFile);

@internal
@Native<
  NativeWin32Result Function(
    Uint32,
    Pointer,
    Uint32,
    Uint32,
    PWSTR,
    Uint32,
    Pointer<Pointer<Int8>>,
  )
>()
external NativeWin32Result FormatMessageW_Wrapper(
  int dwFlags,
  Pointer lpSource,
  int dwMessageId,
  int dwLanguageId,
  PWSTR lpBuffer,
  int nSize,
  Pointer<Pointer<Int8>> arguments,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result FreeConsole_Wrapper();

@internal
@Native<NativeWin32Result Function(HMODULE)>()
external NativeWin32Result FreeLibrary_Wrapper(int hLibModule);

@internal
@Native<NativeWin32Result Function(Uint16)>()
external NativeWin32Result GetActiveProcessorCount_Wrapper(int groupNumber);

@internal
@Native<NativeWin32Result Function(PCWSTR, Pointer<Uint32>)>()
external NativeWin32Result GetBinaryTypeW_Wrapper(
  PCWSTR lpApplicationName,
  Pointer<Uint32> lpBinaryType,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Pointer<COMMCONFIG>, Pointer<Uint32>)
>()
external NativeWin32Result GetCommConfig_Wrapper(
  int hCommDev,
  Pointer<COMMCONFIG> lpCC,
  Pointer<Uint32> lpdwSize,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>)>()
external NativeWin32Result GetCommMask_Wrapper(
  int hFile,
  Pointer<Uint32> lpEvtMask,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>)>()
external NativeWin32Result GetCommModemStatus_Wrapper(
  int hFile,
  Pointer<Uint32> lpModemStat,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<COMMPROP>)>()
external NativeWin32Result GetCommProperties_Wrapper(
  int hFile,
  Pointer<COMMPROP> lpCommProp,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<DCB>)>()
external NativeWin32Result GetCommState_Wrapper(int hFile, Pointer<DCB> lpDCB);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<COMMTIMEOUTS>)>()
external NativeWin32Result GetCommTimeouts_Wrapper(
  int hFile,
  Pointer<COMMTIMEOUTS> lpCommTimeouts,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, Pointer<Uint32>)>()
external NativeWin32Result GetCompressedFileSizeW_Wrapper(
  PCWSTR lpFileName,
  Pointer<Uint32> lpFileSizeHigh,
);

@internal
@Native<NativeWin32Result Function(PWSTR, Pointer<Uint32>)>()
external NativeWin32Result GetComputerNameW_Wrapper(
  PWSTR lpBuffer,
  Pointer<Uint32> nSize,
);

@internal
@Native<NativeWin32Result Function(Int32, PWSTR, Pointer<Uint32>)>()
external NativeWin32Result GetComputerNameExW_Wrapper(
  int nameType,
  PWSTR lpBuffer,
  Pointer<Uint32> nSize,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result GetConsoleCP_Wrapper();

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<CONSOLE_CURSOR_INFO>)>()
external NativeWin32Result GetConsoleCursorInfo_Wrapper(
  int hConsoleOutput,
  Pointer<CONSOLE_CURSOR_INFO> lpConsoleCursorInfo,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>)>()
external NativeWin32Result GetConsoleMode_Wrapper(
  int hConsoleHandle,
  Pointer<Uint32> lpMode,
);

@internal
@Native<NativeWin32Result Function()>()
external NativeWin32Result GetConsoleOutputCP_Wrapper();

@internal
@Native<
  NativeWin32Result Function(HANDLE, Pointer<CONSOLE_SCREEN_BUFFER_INFO>)
>()
external NativeWin32Result GetConsoleScreenBufferInfo_Wrapper(
  int hConsoleOutput,
  Pointer<CONSOLE_SCREEN_BUFFER_INFO> lpConsoleScreenBufferInfo,
);

@internal
@Native<NativeWin32Result Function(Pointer<CONSOLE_SELECTION_INFO>)>()
external NativeWin32Result GetConsoleSelectionInfo_Wrapper(
  Pointer<CONSOLE_SELECTION_INFO> lpConsoleSelectionInfo,
);

@internal
@Native<NativeWin32Result Function(PWSTR, Uint32)>()
external NativeWin32Result GetConsoleTitleW_Wrapper(
  PWSTR lpConsoleTitle,
  int nSize,
);

@internal
@Native<NativeWin32Result Function(Pointer<HANDLE>)>()
external NativeWin32Result GetCurrentActCtx_Wrapper(Pointer<HANDLE> lphActCtx);

@internal
@Native<
  NativeWin32Result Function(PCWSTR, Pointer<COMMCONFIG>, Pointer<Uint32>)
>()
external NativeWin32Result GetDefaultCommConfigW_Wrapper(
  PCWSTR lpszName,
  Pointer<COMMCONFIG> lpCC,
  Pointer<Uint32> lpdwSize,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<Uint32>,
    Pointer<Uint32>,
  )
>()
external NativeWin32Result GetDiskFreeSpaceW_Wrapper(
  PCWSTR lpRootPathName,
  Pointer<Uint32> lpSectorsPerCluster,
  Pointer<Uint32> lpBytesPerSector,
  Pointer<Uint32> lpNumberOfFreeClusters,
  Pointer<Uint32> lpTotalNumberOfClusters,
);

@internal
@Native<
  NativeWin32Result Function(
    PCWSTR,
    Pointer<Uint64>,
    Pointer<Uint64>,
    Pointer<Uint64>,
  )
>()
external NativeWin32Result GetDiskFreeSpaceExW_Wrapper(
  PCWSTR lpDirectoryName,
  Pointer<Uint64> lpFreeBytesAvailableToCaller,
  Pointer<Uint64> lpTotalNumberOfBytes,
  Pointer<Uint64> lpTotalNumberOfFreeBytes,
);

@internal
@Native<NativeWin32Result Function(Uint32, PWSTR)>()
external NativeWin32Result GetDllDirectoryW_Wrapper(
  int nBufferLength,
  PWSTR lpBuffer,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, PWSTR, Uint32)>()
external NativeWin32Result GetEnvironmentVariableW_Wrapper(
  PCWSTR lpName,
  PWSTR lpBuffer,
  int nSize,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>)>()
external NativeWin32Result GetExitCodeProcess_Wrapper(
  int hProcess,
  Pointer<Uint32> lpExitCode,
);

@internal
@Native<NativeWin32Result Function(PCWSTR)>()
external NativeWin32Result GetFileAttributesW_Wrapper(PCWSTR lpFileName);

@internal
@Native<NativeWin32Result Function(PCWSTR, Int32, Pointer)>()
external NativeWin32Result GetFileAttributesExW_Wrapper(
  PCWSTR lpFileName,
  int fInfoLevelId,
  Pointer lpFileInformation,
);

@internal
@Native<
  NativeWin32Result Function(HANDLE, Pointer<BY_HANDLE_FILE_INFORMATION>)
>()
external NativeWin32Result GetFileInformationByHandle_Wrapper(
  int hFile,
  Pointer<BY_HANDLE_FILE_INFORMATION> lpFileInformation,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>)>()
external NativeWin32Result GetFileSize_Wrapper(
  int hFile,
  Pointer<Uint32> lpFileSizeHigh,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Int64>)>()
external NativeWin32Result GetFileSizeEx_Wrapper(
  int hFile,
  Pointer<Int64> lpFileSize,
);

@internal
@Native<NativeWin32Result Function(HANDLE)>()
external NativeWin32Result GetFileType_Wrapper(int hFile);

@internal
@Native<NativeWin32Result Function(HANDLE, PWSTR, Uint32, Uint32)>()
external NativeWin32Result GetFinalPathNameByHandleW_Wrapper(
  int hFile,
  PWSTR lpszFilePath,
  int cchFilePath,
  int dwFlags,
);

@internal
@Native<NativeWin32Result Function(PCWSTR, Uint32, PWSTR, Pointer<PWSTR>)>()
external NativeWin32Result GetFullPathNameW_Wrapper(
  PCWSTR lpFileName,
  int nBufferLength,
  PWSTR lpBuffer,
  Pointer<PWSTR> lpFilePart,
);

@internal
@Native<NativeWin32Result Function(HANDLE, Pointer<Uint32>)>()
external NativeWin32Result GetHandleInformation_Wrapper(
  int hObject,
  Pointer<Uint32> lpdwFlags,
);
